background an foreground color contrast fixed
+ improve contrast ratio.

--- a/src/scss/modules/_comments.scss
+++ b/src/scss/modules/_comments.scss
@@ -91,7 +91,7 @@
       content: ' " ';
       color: var(--secondary-color);
       font-family: var(--black-font);
-      font-size: 1.5em;
+      font-size: 1.1em;
     }
 
     @include mq(xl) {
