--- a/src/scss/modules/_heroImage.scss
+++ b/src/scss/modules/_heroImage.scss
@@ -86,7 +86,7 @@
   // .hero-image__btn
   &__btn {
     display: inline-block;
-    background-color: var(--tertiary-color);
+    background-color: var(--quaternary-color);
     color: var(--text-color-white);
     padding: 0.5em 2em;
     font-family: var(--bold-font);
