--- a/src/scss/modules/_ourStory.scss
+++ b/src/scss/modules/_ourStory.scss
@@ -64,7 +64,7 @@
 
   // .our-story__description > span
   &__description {
-    > span { font-family: var(--bold-font); color: var(--tertiary-color); }
+    > span { font-family: var(--bold-font); color: var(--quaternary-color); }
   }
 
   // .our-story__photo
