--- a/src/scss/modules/_philosophy.scss
+++ b/src/scss/modules/_philosophy.scss
@@ -64,7 +64,7 @@
 
     > span {
       font-family: var(--bold-font);
-      color: var(--tertiary-color);
+      color: var(--quaternary-color);
     }
   }
 
