--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -10,11 +10,13 @@
   --primary-color:    #0C3455;
   --secondary-color:  #00ABFF;
   --tertiary-color:   #3088F4;
-  --quaternary-color: #FFF;
-  --quinary-color:    #000;
+  --quaternary-color: #2466B7;
+  --quinary-color:    #1E5599;
+  --senary-color:     #18447A;
 
-  --text-color-black: var(--quinary-color);
-  --text-color-white: var(--quaternary-color);
+
+  --text-color-black: #000;
+  --text-color-white: #FFF;
 
   --z-down:   25;
   --z-middle: 50;
